--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -31,8 +31,8 @@
       url: /industries/automotive
     - label: Client Devices
       url: /industries/client-devices
-    # - label: Enterprise
-    #   url: /industries/enterprise
+    - label: Enterprise
+      url: /industries/enterprise
 # - label: Technologies
 #   key: technologies
 #   children:
