--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -3,10 +3,10 @@
   children:
     - label: Consulting
       url: /services/consulting
+    - label: Upstreaming Linux kernel Services
+      url: /services/upstreaming-linux-kernel
     - label: BSP Development
       url: /services/bsp-development
-    # - label: Upstreaming Linux kernel Services
-    #   url: /services/upstreaming-linux-kernel
     - label: Long Term Support
       url: /services/lts
     - label: Training
