--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -67,6 +67,7 @@ jobs:
           export CUSTOM_DOMAIN="${{ vars.AWS_STATIC_SITE_URL }}-${{ github.event.number }}.ghactions.linaro.org"
           export AWS_STATIC_SITE_URL=${{ vars.AWS_STATIC_SITE_URL }}
           rm -rf node_modules
+          yarn install --ignore-engines
           # Build script does yarn install and yarn build
           /srv/github-action-scripts/build-astro-site.sh
         env:
