--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -32,13 +32,12 @@ jobs:
           path: |
             cache
             .sst
-          key: cache-main-${{ hashFiles('**/yarn.lock') }}
+          key: cache-main
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: "yarn"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
