Changes to implement SSR and preview site building. NOT YET WORKING!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "vscode-neovim.neovimInitVimPaths.linux": "~/.config/nvim/init.lua"
+  "vscode-neovim.neovimInitVimPaths.linux": "~/.config/nvim/init.lua",
+  "files.watcherExclude": {
+    "**/dist/*": true,
+    "**/node_modules/*": true
+  }
 }
