--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
-    "@astrojs/mdx": "^2.2.4",
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/node": "^9.5.2",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/sitemap": "^3.7.0",
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
     "@auth/core": "^0.34.0",
@@ -34,7 +36,7 @@
     "@iconify-json/mdi": "^1.1.64",
     "@solid-primitives/scheduled": "^1.4.3",
     "@tailwindcss/typography": "^0.5.12",
-    "astro": "^4.5.16",
+    "astro": "^5.16.15",
     "astro-cloudinary": "^1.1.0",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.1",
