--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "decap-cms-app": "^3.8.3",
     "marked": "^12.0.1",
     "pagefind": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "remark": "^15.0.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.16",
@@ -65,5 +67,10 @@
     "sass": "^1.72.0",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.4.5"
+  },
+  "overrides": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "slate": "0.47.9"
   }
 }
