--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -70,13 +70,13 @@ jobs:
           export PUBLIC_FRIENDLY_CAPTCHA_SITEKEY=${{ vars.FRIENDLY_CAPTCHA_SITEKEY }}
           export CUSTOM_DOMAIN=${{ vars.MAIN_CUSTOM_DOMAIN }}
           export GA_ID=${{ vars.MAIN_GA_ID }}
-          # Set up npm
-          npm install
+          # Set up yarn
+          yarn install
           # Build & deploy
           if [ -d "dist" ]; then
             rm -rf dist
           fi
-          npx sst deploy --stage prod
+          yarn sst deploy --stage prod
 
       - uses: actions/cache/save@v4
         with:
