--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "astro-navbar": "^2.3.1",
     "astro-pagefind": "^1.4.0",
     "astro-seo": "^0.8.3",
-    "astro-sst": "^3.1.4",
+    "astro-sst": "^2.41.4",
     "dayjs": "^1.11.10",
     "decap-cms-app": "^3.8.3",
     "marked": "^12.0.1",
@@ -68,7 +68,7 @@
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.4.5"
   },
-  "overrides": {
+  "resolutions": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "slate": "0.47.9"
