--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "astro-navbar": "^2.3.1",
     "astro-pagefind": "^1.4.0",
     "astro-seo": "^0.8.3",
-    "astro-sst": "^2.41.4",
+    "astro-sst": "^3.1.4",
+    "auth-astro": "^4.1.1",
     "dayjs": "^1.11.10",
     "decap-cms-app": "^3.8.3",
     "marked": "^12.0.1",
