--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -71,7 +71,7 @@ jobs:
           export CUSTOM_DOMAIN=${{ vars.MAIN_CUSTOM_DOMAIN }}
           export GA_ID=${{ vars.MAIN_GA_ID }}
           # Set up yarn
-          yarn install --frozen-lockfile --ignore-engines
+          yarn install
           # Build & deploy
           if [ -d "dist" ]; then
             rm -rf dist
