--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
-    "@astrojs/mdx": "^2.2.4",
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/node": "^9.5.2",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/sitemap": "^3.7.0",
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
     "@auth/core": "^0.34.0",
@@ -34,18 +36,20 @@
     "@iconify-json/mdi": "^1.1.64",
     "@solid-primitives/scheduled": "^1.4.3",
     "@tailwindcss/typography": "^0.5.12",
-    "astro": "^4.5.16",
+    "astro": "^5.16.15",
     "astro-cloudinary": "^1.1.0",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.1",
     "astro-pagefind": "^1.4.0",
     "astro-seo": "^0.8.3",
-    "astro-sst": "^2.41.4",
+    "astro-sst": "^3.1.4",
     "auth-astro": "^4.1.1",
     "dayjs": "^1.11.10",
     "decap-cms-app": "^3.8.3",
     "marked": "^12.0.1",
     "pagefind": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "remark": "^15.0.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.16",
@@ -64,5 +68,10 @@
     "sass": "^1.72.0",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.4.5"
+  },
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "slate": "0.47.9"
   }
 }
