--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "slate": "0.47.9"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "*"
   }
 }
