--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -35,7 +35,7 @@ jobs:
           key: cache-main
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
@@ -71,8 +71,11 @@ jobs:
           export PUBLIC_FRIENDLY_CAPTCHA_SITEKEY=${{ vars.FRIENDLY_CAPTCHA_SITEKEY }}
           export CUSTOM_DOMAIN=${{ vars.MAIN_CUSTOM_DOMAIN }}
           export GA_ID=${{ vars.MAIN_GA_ID }}
+
           # Set up npm
-          npm install
+          node -v
+          npm ci
+
           # Build & deploy
           if [ -d "dist" ]; then
             rm -rf dist
