--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,6 +12,10 @@ concurrency:
 env:
   NODE_VERSION: "20.19.0"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   process-pull-request:
     runs-on: self-hosted
