--- a/.github/workflows/close_pr.yml
+++ b/.github/workflows/close_pr.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
     types: [closed]
 
+permissions:
+  contents: read
+  statuses: write
+  pull-requests: write
+  id-token: write
+
 jobs:
   cleanup:
     runs-on: self-hosted
@@ -19,6 +25,12 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::691071635361:role/github-actions-oidc-role
+          aws-region: us-east-1
 
       - name: Remove SST Stage
         run: |
