--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -52,6 +52,9 @@ jobs:
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Merge test branch
+        uses: linaro-its/merge-test-branch@v2.7
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
