--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -11,6 +11,8 @@
       url: /services/lts
     - label: Training
       url: /services/training
+    - label: Software Supply Chain Management
+      url: /services/software-supply-chain-management
     - label: Qualcomm Centre of Excellence
       url: /services/qualcomm-platform
     - label: NXP Platform Services
