--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -80,7 +80,7 @@ jobs:
           if [ -d "dist" ]; then
             rm -rf dist
           fi
-          npx sst deploy --stage prod
+          npx sst deploy --stage prod --verbose
 
       - uses: actions/cache/save@v4
         with:
