--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.7.0",
-    "@astrojs/solid-js": "^4.0.1",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/solid-js": "^5.1.3",
     "@cloudinary/url-gen": "^1.19.0",
     "@fontsource/lato": "^5.0.20",
     "@friendlycaptcha/sdk": "^0.1.36",
@@ -31,6 +30,7 @@
     "@solid-primitives/scheduled": "^1.4.3",
     "@tailwindcss/typography": "^0.5.12",
     "astro": "^5.17.2",
+    "@tailwindcss/vite": "^4.1.18",
     "astro-cloudinary": "^1.1.0",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.1",
@@ -48,7 +48,7 @@
     "solid-js": "^1.8.16",
     "sst": "^3.17.38",
     "strip-markdown": "^6.0.0",
-    "tailwindcss": "^3.4.19",
+    "tailwindcss": "^4.1.18",
     "tw-elements": "^2.0.0",
     "vanilla-cookieconsent": "^2.9.2"
   },
