--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -69,6 +69,7 @@ jobs:
           export DECAP_DOMAIN=${{ vars.DECAP_DOMAIN }}
           export PUBLIC_CLOUDINARY_CLOUD_NAME=${{ secrets.PUBLIC_CLOUDINARY_CLOUD_NAME }}
           export PUBLIC_FRIENDLY_CAPTCHA_SITEKEY=${{ vars.FRIENDLY_CAPTCHA_SITEKEY }}
+          export FRIENDLY_CAPTCHA_API_KEY=${{ secrets.FRIENDLY_CAPTCHA_API_KEY }}
           export CUSTOM_DOMAIN=${{ vars.MAIN_CUSTOM_DOMAIN }}
           export GA_ID=${{ vars.MAIN_GA_ID }}
           export PIPELINE_CRM_API_KEY=${{ secrets.PIPELINE_CRM_API_KEY }}
