--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "solid-js": "^1.8.16",
     "sst": "^3.17.38",
     "strip-markdown": "^6.0.0",
-    "tailwindcss": "^3.4.19",
+    "survey-core": "^2.5.10",
+    "survey-js-ui": "^2.5.10",
+    "tailwindcss": "^3.4.3",
     "tw-elements": "^2.0.0",
     "vanilla-cookieconsent": "^2.9.2"
   },
